# AtlasX-Discovery-Layer-

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  atlasx.yaml.example  pyproject.toml
.claude/: CLAUDE.md  settings.example.json
.claude/agents/: atlasx-bias-ethics-reviewer.md  atlasx-code-maintainer.md  atlasx-connection-reasoner.md  atlasx-discovery-director.md  atlasx-evidence-appraiser.md  atlasx-first-principles-extractor.md  atlasx-gap-contradiction-detector.md  atlasx-intake.md  atlasx-ontology-mapper.md  atlasx-orchestrator.md  atlasx-source-integrity.md  atlasx-stemd-analyst.md  (+2 more)
docs/: bias_and_ethics.md  data_lifecycle.md  discovery_layer_architecture.md  first_principles_research_reasoning.md  local_llm_setup.md  openai_setup.md  outputs_and_visualizations.md  paywall_and_copyright_guidance.md  stemd_framework.md
docs/claude/: README.md  (+6 more)
examples/: README.md
how_to_use/: README.md
prompts/: README.md
schemas/: agent_run.schema.json  discovery_direction.schema.json  evidence_unit.schema.json  gap.schema.json  graph_edge.schema.json  graph_node.schema.json  knowledge_atom.schema.json  mechanism.schema.json  notebook_manifest.schema.json  paper_metadata.schema.json  source_atom.schema.json  source_route.schema.json  stemd.schema.json
tests/: test_anthropic_provider.py  test_claude_project_files.py  test_general_notebook_pipeline.py  test_graph_exports.py  test_manifest_loader.py  test_models.py  test_offline_pipeline.py  test_pdf_loader.py  test_source_classifier.py  test_source_models.py
(+110 files in other folders)
