[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasx-discovery-layer"
version = "0.1.0"
description = "First-principles, multi-agent research sensemaking for papers."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "AtlasX contributors" }
]
keywords = [
  "research",
  "knowledge-graph",
  "literature-review",
  "multi-agent",
  "sensemaking",
  "openai",
  "local-llm"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "networkx>=3.2",
  "openai>=1.30"
]

[project.optional-dependencies]
pdf = [
  "pypdf>=4.0"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
atlasx = "atlasx.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

